# guardrV6

./: .dockerignore  .gitignore  1029.txt  1029dh.txt  1101.txt  ASYNC_OSINT_API.md  COMPILATION_FIXES_SUMMARY.md  COPILOT_SESSION_MIGRATION.md  Cargo.toml  DEPLOYMENT_IN_PROGRESS.md  DEPLOYMENT_STATUS.md  DEPLOY_TO_DIGITALOCEAN.md  Dockerfile  NAMECHEAP_DNS_SETUP.md  NEXT_STEPS.md  PORT_CONFIGURATION.md  README.md  RUST_DEPLOYMENT_BUILDING.md  SETUP_COMPLETE.md  SSL_ISSUE_EXPLANATION.md  TIMEOUT_FIX_SUMMARY.md  WHATS_ACTUALLY_RUNNING.md  bt.py  deploy.ps1  guardr_ai_analyst.py  guardr_ultimate_v2.py  package.json  run_lady_guardr.py
.do/: app.yaml
.github/: copilot-instructions.md
.github/workflows/: deploy-namecheap.yml  deploy.yml
config/: default.toml
docs/: API_INTEGRATION_GUIDE.md  DEPLOY_TO_NAMECHEAP.md  codestral_agent.md  guardr_drag_breakdown.md
doctl/: .do.env.example  1.1k HOTMAIL MAIL ACCESS BY @Trax365.txt  1.2k HOTMAIL MAIL ACCESS BY @Trax365.txt  1.3k EUROPE MAIL ACCESS MIX BY @Trax365.txt  Caleb Mills Stewart - xAI Tutor Resume.docx  Cover Letter Caleb Mills Stewart - xAI AI Tutor Position.docx  Dockerfile  README.md  X871 HOTMAIL MAIL ACCESS BY @Trax365.txt  deploy.sh  do-api-essentials.yaml  docker-compose.yml  docker-entrypoint.sh  github-actions-workflow.yml
doctl/scripts/: 01-deploy-app.sh  02-setup-secrets.sh  03-manage-app.sh  04-create-droplet.sh
guardr-backend/: Cargo.toml
scripts/: run_lady_guardr.py
src/: api_server.rs  auth.rs  config.rs  database.rs  errors.rs  fetch_dumps.rs  filter.rs  filter_cli.rs  filtermain.rs  main.rs  middleware.rs  risk_score.rs  state.rs  weak_pass.rs
website/: README.md  package-lock.json  package.json  tailwind.config.ts  test-site.js
(+28 files in other folders)
